--- a/.github/workflows/build-library.yml
+++ b/.github/workflows/build-library.yml
@@ -32,5 +32,5 @@ jobs:
       - uses: actions/upload-artifact@v2.2.4
         with:
           name: built-scripts
-          path: Library/Script Libraries # or path/to/artifact
+          path: /Users/runner/Library/Script Libraries # or path/to/artifact
 
